<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleLoginTextView"
        android:layout_width="149dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/log_in"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterUsernameTextView"
        android:layout_width="228dp"
        android:layout_height="19dp"
        android:layout_marginTop="40dp"
        android:text="@string/enter_your_user_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLoginTextView" />

    <EditText
        android:id="@+id/userNameLoginEditText"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:autofillHints="Please enter user name"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterUsernameTextView" />

    <TextView
        android:id="@+id/enterPasswordTextView"
        android:layout_width="228dp"
        android:layout_height="19dp"
        android:layout_marginTop="40dp"
        android:text="@string/enter_your_password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameLoginEditText" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:autofillHints="Please enter user name"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordTextView" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="110dp"
        android:text="@string/log_in"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLoginEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>