<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditItemActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="730dp"
        android:src="@drawable/homepagebg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleEditItemPageTextView"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/abeezeeregular"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editItemPageTitleEditText"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:autofillHints="Enter title"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/abeezeeregular"
        android:hint="@string/title"
        android:inputType="text"
        android:paddingStart="20dp"

        android:paddingEnd="20dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditItemPageTextView" />

    <Button
        android:id="@+id/editItemHealthButton"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"

        android:backgroundTint="@color/QuillHighlight"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/health"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editItemPageTitleEditText" />

    <ImageView
        android:id="@+id/editItemPageHealthSelected"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/createitempageselectedbox"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editItemPageTitleEditText" />

    <Button
        android:id="@+id/editItemSportsButton"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"

        android:backgroundTint="@color/QuillSports"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/sports"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editItemPageTitleEditText" />

    <ImageView
        android:id="@+id/editItemPageSportsSelected"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/createitempageselectedbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editItemPageTitleEditText"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/editItemScienceButton"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_button"

        android:backgroundTint="@color/QuillScience"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/science"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editItemPageTitleEditText" />

    <ImageView
        android:id="@+id/editItemPageScienceSelected"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:src="@drawable/createitempageselectedbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editItemPageTitleEditText"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/editItemPageContentEditText"
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        android:autofillHints="Enter content"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/abeezeeregular"
        android:hint="@string/enter_content"
        android:inputType="text|textMultiLine"
        android:gravity="top|start"
        android:padding="20dp"
        android:minLines="10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editItemSportsButton" />

    <Button
        android:id="@+id/editItemPageConfirmButton"
        android:layout_width="240dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"

        android:backgroundTint="@color/QuillOrange"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/confirm_changes"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editItemPageContentEditText" />

    <Button
        android:id="@+id/editItemPageCancelButton"
        android:layout_width="240dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"

        android:backgroundTint="@color/QuillBeige"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editItemPageConfirmButton" />

</androidx.constraintlayout.widget.ConstraintLayout>