<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateItemActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="730dp"
        android:src="@drawable/homepagebg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleCreateItemPageTextView"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/abeezeeregular"
        android:gravity="center"
        android:text="@string/create_an_item"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createItemPageTitleEditText"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:autofillHints="Enter title"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/abeezeeregular"
        android:hint="@string/title"
        android:inputType="text"
        android:paddingStart="20dp"

        android:paddingEnd="20dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCreateItemPageTextView" />

    <Button
        android:id="@+id/createItemHealthButton"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"

        android:backgroundTint="@color/QuillHighlight"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/health"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createItemPageTitleEditText" />

    <ImageView
        android:id="@+id/createItemPageHealthSelected"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/createitempageselectedbox"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createItemPageTitleEditText" />

    <Button
        android:id="@+id/createItemSportsButton"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"

        android:backgroundTint="@color/QuillSports"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/sports"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createItemPageTitleEditText" />

    <ImageView
        android:id="@+id/createItemPageSportsSelected"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/createitempageselectedbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createItemPageTitleEditText"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/createItemScienceButton"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_button"

        android:backgroundTint="@color/QuillScience"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/science"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createItemPageTitleEditText" />

    <ImageView
        android:id="@+id/createItemPageScienceSelected"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:src="@drawable/createitempageselectedbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createItemPageTitleEditText"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/createItemPageContentEditText"
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        android:autofillHints="Enter content"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/abeezeeregular"
        android:hint="@string/enter_content"
        android:inputType="text|textMultiLine"
        android:gravity="top|start"
        android:padding="20dp"
        android:minLines="10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createItemSportsButton" />

    <Button
        android:id="@+id/createItemPageConfirmButton"
        android:layout_width="240dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"

        android:backgroundTint="@color/QuillOrange"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createItemPageContentEditText" />

    <Button
        android:id="@+id/createItemPageCancelButton"
        android:layout_width="240dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"

        android:backgroundTint="@color/QuillBeige"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createItemPageConfirmButton" />

</androidx.constraintlayout.widget.ConstraintLayout>